Fix minor issue.

--- a/step5_WWW_Domain_Agnostic_Classifier_Process.ipynb
+++ b/step5_WWW_Domain_Agnostic_Classifier_Process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -10,18 +10,17 @@
      "output_type": "stream",
      "text": [
       "Importing Jupyter notebook from utils.ipynb\n",
-      "Importing Jupyter notebook from WWW_classifier_experiments_features.ipynb\n",
-      "Importing Jupyter notebook from extract_save_features.ipynb\n",
-      "Importing Jupyter notebook from web_markup_features.ipynb\n"
+      "Importing Jupyter notebook from step4_WWW_classifier_experiments_features.ipynb\n",
+      "Importing Jupyter notebook from step1_web_markup_features.ipynb\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<module 'web_markup_features' from 'web_markup_features.ipynb'>"
+       "<module 'step1_web_markup_features' from 'step1_web_markup_features.ipynb'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,9 +28,9 @@
    "source": [
     "#IMPORTING EXTERNAL JUPYTER NOTEBOOKS\n",
     "import nbimporter\n",
-    "from WWW_classifier_experiments_features import *\n",
-    "from extract_save_features import *\n",
-    "from web_markup_features import *\n",
+    "from step4_WWW_classifier_experiments_features import *\n",
+    "# from extract_save_features import *\n",
+    "from step1_web_markup_features import *\n",
     "# import nltk_linguistic_features as nltk_linguis_features\n",
     "import utils as utils\n",
     "from importlib import reload\n",
@@ -41,13 +40,13 @@
     "# reload(sys.modules['nltk_linguistic_features'])\n",
     "reload(sys.modules['utils'])\n",
     "reload(sys.modules['step4_WWW_classifier_experiments_features']) # WWW_Classifier_Experiments\n",
-    "reload(sys.modules['extract_save_features'])\n",
+    "# reload(sys.modules['extract_save_features'])\n",
     "reload(sys.modules['step1_web_markup_features'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,6 +451,93 @@
     "run_classifier(typeFeatures, type_text, path_data, [train_fake_files, train_msm_files, test_fake_files, test_msm_files], filter_features)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy KNN: 0.603448275862069\n",
+      "Accuracy SVM: 0.6336206896551724\n",
+      "Accuracy SDG: 0.5474137931034483\n",
+      "Accuracy RF: 0.603448275862069\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_data = \"/Users/soniacq/Fakenews/paper_fn/Experiments/data/domain_agnostic/\"\n",
+    "\n",
+    "test_fake_files = ['LIWC2015_fakenews_celebrity_content.csv'] #'LIWC2015_fakenews_celebrity.csv','LIWC2015_fakenews_celebrity_content.csv','LIWC2015_fakenews_celebrity_headContent.csv']\n",
+    "test_msm_files = ['LIWC2015_realnews_celebrity_content.csv'] #'LIWC2015_realnews_celebrity.csv' , 'LIWC2015_realnews_celebrity_content.csv', 'LIWC2015_realnews_celebrity_headContent.csv']\n",
+    "train_fake_files = ['LIWC2015_fakenews_political2016_content.csv']#'LIWC2015_fakenews_political2016.csv' ,'LIWC2015_fakenews_political2016_content.csv','LIWC2015_fakenews_political2016_headContent.csv']\n",
+    "train_msm_files = ['LIWC2015_realnews_political2016_content.csv'] #'LIWC2015_realnews_political2016.csv' , 'LIWC2015_realnews_political2016_content.csv', 'LIWC2015_realnews_political2016_headContent.csv']\n",
+    "\n",
+    "features = [['linguisticF_NLTK', 'linguisticF_LIWC',  'readabilityF','webmarkupF']]\n",
+    "typeFeatures = features[0]\n",
+    "type_text = 2\n",
+    "filter_features = content_filter_features\n",
+    "run_classifier(typeFeatures, type_text, path_data, [train_fake_files, train_msm_files, test_fake_files, test_msm_files], filter_features)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy KNN: 0.6378539493293591\n",
+      "Accuracy SVM: 0.7019374068554396\n",
+      "Accuracy SDG: 0.7078986587183308\n",
+      "Accuracy RF: 0.639344262295082\n"
+     ]
+    }
+   ],
+   "source": [
+    "path_data = \"/Users/soniacq/Fakenews/paper_fn/Experiments/data/domain_agnostic/\"\n",
+    "\n",
+    "train_fake_files = ['LIWC2015_fakenews_celebrity_content.csv'] #'LIWC2015_fakenews_celebrity.csv','LIWC2015_fakenews_celebrity_content.csv','LIWC2015_fakenews_celebrity_headContent.csv']\n",
+    "train_msm_files = ['LIWC2015_realnews_celebrity_content.csv'] #'LIWC2015_realnews_celebrity.csv' , 'LIWC2015_realnews_celebrity_content.csv', 'LIWC2015_realnews_celebrity_headContent.csv']\n",
+    "test_fake_files = ['LIWC2015_fakenews_political2016_content.csv']#'LIWC2015_fakenews_political2016.csv' ,'LIWC2015_fakenews_political2016_content.csv','LIWC2015_fakenews_political2016_headContent.csv']\n",
+    "test_msm_files = ['LIWC2015_realnews_political2016_content.csv'] #'LIWC2015_realnews_political2016.csv' , 'LIWC2015_realnews_political2016_content.csv', 'LIWC2015_realnews_political2016_headContent.csv']\n",
+    "\n",
+    "features = [['linguisticF_NLTK', 'linguisticF_LIWC',  'readabilityF','webmarkupF']]\n",
+    "typeFeatures = features[0]\n",
+    "type_text = 2\n",
+    "filter_features = content_filter_features\n",
+    "run_classifier(typeFeatures, type_text, path_data, [train_fake_files, train_msm_files, test_fake_files, test_msm_files], filter_features)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
