Fix typo issues.

--- a/step5_WWW_Domain_Agnostic_Classifier_Process.ipynb
+++ b/step5_WWW_Domain_Agnostic_Classifier_Process.ipynb
@@ -50,14 +50,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Applying classifier over the test dataset using invariant features. To classifiers SGD and RandomForest. They needs float data\n",
+    "#Applying classifier over the test dataset using invariant features. SGD and RandomForest classifiers need to handle float data.\n",
     "def test_classifier_floatdata(dir_file_test_fake, dir_file_test_msm, classifier, typefeatures, type_text, filter_features):\n",
     "    X_fakenews, fakenews_labels_list, fakenews_list_urls = extract_features_filter(typefeatures, type_text, dir_file_test_fake, 1, filter_features ) #1 means fake news. \n",
     "    X_msmnews, msmnews_labels_list, msmnews_list_urls = extract_features_filter(typefeatures, type_text, dir_file_test_msm, 0, filter_features)#0 means true news.\n",
     "    X_temp = np.asarray(X_fakenews+ X_msmnews)\n",
     "    new_X = []\n",
     "    for i in X_temp:\n",
-    "        desired_array =  i.astype(np.float) #convert string  arrays to float arrays\n",
+    "        desired_array =  i.astype(np.float) #convert from string arrays to float arrays\n",
     "        new_X.append(desired_array)\n",
     "    X = new_X\n",
     "    y_true = np.asarray(fakenews_labels_list + msmnews_labels_list) \n",
@@ -228,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Feature that will be filtered. The arrays contain the feature's indexes. Those features were selected after feature engeeniering\n",
+    "#Features that will be filtered. The arrays contain the feature's indexes. Those features were selected after feature engeeniering\n",
     "#HEADLINES\n",
     "h_liwc_filter = [85, 55, 74, 77]\n",
     "h_readability_filter = [7, 18]\n",
@@ -477,7 +477,7 @@
     }
    ],
    "source": [
-    "path_data = \"/Users/soniacq/Fakenews/paper_fn/Experiments/data/domain_agnostic/\"\n",
+    "path_data = \"/Users/.../Fakenews/paper_fn/Experiments/data/domain_agnostic/\"\n",
     "\n",
     "test_fake_files = ['LIWC2015_fakenews_celebrity_content.csv'] #'LIWC2015_fakenews_celebrity.csv','LIWC2015_fakenews_celebrity_content.csv','LIWC2015_fakenews_celebrity_headContent.csv']\n",
     "test_msm_files = ['LIWC2015_realnews_celebrity_content.csv'] #'LIWC2015_realnews_celebrity.csv' , 'LIWC2015_realnews_celebrity_content.csv', 'LIWC2015_realnews_celebrity_headContent.csv']\n",
@@ -517,7 +517,7 @@
     }
    ],
    "source": [
-    "path_data = \"/Users/soniacq/Fakenews/paper_fn/Experiments/data/domain_agnostic/\"\n",
+    "path_data = \"/Users/.../Fakenews/paper_fn/Experiments/data/domain_agnostic/\"\n",
     "\n",
     "train_fake_files = ['LIWC2015_fakenews_celebrity_content.csv'] #'LIWC2015_fakenews_celebrity.csv','LIWC2015_fakenews_celebrity_content.csv','LIWC2015_fakenews_celebrity_headContent.csv']\n",
     "train_msm_files = ['LIWC2015_realnews_celebrity_content.csv'] #'LIWC2015_realnews_celebrity.csv' , 'LIWC2015_realnews_celebrity_content.csv', 'LIWC2015_realnews_celebrity_headContent.csv']\n",
